# agentgateway

./: .gitignore  AGENTGATEWAY_AUTH_FORWARDING_ISSUE.md  AZURE_PORTAL_OAUTH_GUIDE.md  CODEOWNERS  CONTRIBUTION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.acr  Dockerfile.s390x  Dockerfile.windows  E2E_TESTING_FIXES.md  GITHUB_ISSUE_TOKEN_FORWARDING.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPENNHP_QURL_Integration.md  PR_SUMMARY.md  PR_UPSTREAM_DESCRIPTION.md  QUICK_START.md  README.md  SAMPLE_COMMERCE_SETUP.md  SCHEMA-DOC-COMMENTS.md  SECURITY.md  Tiltfile  agentgateway-fail-open-spec.md  configure-easy-auth.sh  ersomarfloDesktopmcp-devfor_k_nuevos_cambiosagentgateway  go.mod  go.sum  report.md  revert-changes.sh  sample-commerce-auth0.yaml  test-config-optimized.yaml  test-config.yaml  tmp-config.yaml
.cargo/: config.toml
Jackie/: README.md
api/: ext_mcp.pb.go  ext_mcp_grpc.pb.go  ext_mcp_json.gen.go  go.mod  resource.pb.go  resource_json.gen.go
architecture/: cel.md  mcp-response-compression.md
benchmarking/: README.md  benchmark.ipynb  download-results.sh  generate_plots.py  run-benchmark.sh  setup-benchmarks.sh  values.yaml
benchmarks/: README.md
controller/: .custom-gcl.yml  .golangci.yaml  Makefile  README.md  go.mod
crates/aauth/: Cargo.toml
crates/aauth/src/: errors.rs  lib.rs
crates/aauth/src/tokens/: agent_token.rs  auth_token.rs  mod.rs  validation.rs
crates/http-message-sig/: Cargo.toml
crates/http-message-sig/src/: errors.rs  lib.rs
crates/http-message-sig/src/digest/: content_digest.rs  mod.rs
crates/http-message-sig/src/encoding/: base64.rs
crates/http-message-sig/src/headers/: mod.rs  signature.rs  signature_input.rs  signature_key.rs
crates/http-message-sig/src/keys/: ed25519.rs  jwk.rs  jwk_thumbprint.rs  mod.rs
crates/http-message-sig/src/signing/: mod.rs  signature_base.rs  signer.rs  verifier.rs
crates/http-message-sig/tests/: aauth-test-vectors.json  test_vectors.rs
crates/hyper-util-fork/: Cargo.toml
crates/hyper-util-fork/benches/: pooling_client.rs
crates/hyper-util-fork/src/client/legacy/: client.rs  http2_tests.rs  mod.rs  pool.rs
crates/hyper-util-fork/src/client/legacy/connect/proxy/: tunnel.rs
crates/hyper-util-fork/tests/: http2_pooling_blackbox.rs
deploy/: EASY_AUTH_DEPLOYMENT.md  README.md  deploy.sh  easy-auth-config.json
design/: 1255-priority-based-backend-failover.md  1462-model-catalog-discovery.md  1929-vertex-native-gemini.md  2141-governance-trace-metadata.md  288-inferencepool-ai-policies.md  README.md
examples/wasm-guards/simple-pattern-guard/: Cargo.toml  README.md
examples/wasm-guards/simple-pattern-guard/src/: lib.rs
examples/wasm-guards/simple-pattern-guard/wit/: guard.wit
(+1778 files in other folders)
