[package]
name = "http-message-sig"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek = "2"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
