[package]
name = "hyper-util-fork"
version = "0.1.14"
description = "hyper utilities"
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-util"
repository = "https://github.com/hyperium/hyper-util"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-channel = { workspace = true }
futures-core.workspace = true
futures-util = { workspace = true }
http.workspace = true
hyper.workspace = true
pin-project-lite.workspace = true
tracing = { workspace = true, features = ["std"] }
tokio = { workspace = true }
tower-service = { workspace = true }
parking_lot = "0.12.5"
hashbrown = "0.16.1"
axum-core = "0.5.6"

[dev-dependencies]
assert_matches.workspace = true
hyper = { workspace = true, features = ["full"] }
bytes.workspace = true
http-body-util.workspace = true
divan.workspace = true
pprof.workspace = true
futures-util = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "test-util", "signal", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[features]
default = []
